# Texas

./: .dev.env  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  SECURITY.md  alembic.ini  alembic_chat.ini  compose.yaml  entrypoint.sh  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: audit.md  bump.md  commit.md  db-migrate.md  lint.md  new-api.md  new-handler.md  typecheck.md  update-claude-md.md
.claude/hooks/: block-md-txt.sh  console-log-stop.sh  console-log-warn.sh  format-frontend.sh  format-python.sh  pnpm-install.sh
.claude/rules/: coding-style.md  git-workflow.md  llm.md  performance.md  security.md
.claude/skills/texas-new-api/: SKILL.md
.claude/skills/texas-new-handler/: SKILL.md
.claude/skills/texas-new-service/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
deploy/: Dockerfile  compose.yaml  docker-compose.yml
deploy/helm/texas/: Chart.yaml  values.yaml
frontend/: package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  test-setup.ts
frontend/src/api/: bot.ts  handlers.ts  index.ts  stats.ts
frontend/src/apis/: auth.ts  bot.ts  chat.ts  checkin.ts  client.ts  driftBottle.ts  feedback.ts  jrlp.ts  like.ts  llm.ts  permission.ts  personnel.ts  queue.ts
frontend/src/components/: AppMegaMenu.vue  GroupAutocomplete.vue  GroupInfoCard.vue  PageHeader.vue  PageLayout.vue  UserAutocomplete.vue  UserInfoCard.vue
frontend/src/composables/: useAutoRefresh.ts  useWebSocket.ts
frontend/src/layouts/: Menu.vue  PageLayout.vue
frontend/src/router/: guards.ts  index.ts
frontend/src/services/: chat.ts  llm.ts  personnel.ts  queue.ts
frontend/src/stores/: bot.ts  chat.ts  handlers.ts  llm.ts  permission.ts  personnel.ts  queue.ts  stats.ts  theme.ts
frontend/src/styles/: main.scss
frontend/src/types/: api.ts  bot.ts  handler.ts
frontend/src/utils/: feedbackExport.ts  personnel.ts  tree.ts
frontend/src/views/: AuthSettingsView.vue  ChatArchiveView.vue  ChatMessagesView.vue  ChatOverviewView.vue  DashboardView.vue  GroupsView.vue  HandlersView.vue  LLMModelsView.vue  LLMProvidersView.vue  LoginView.vue  LogsView.vue  PersonnelAdminsView.vue  PersonnelGroupsView.vue  PersonnelSyncView.vue  PersonnelUsersView.vue  QueueView.vue  SettingsView.vue
helm/texas/: Chart.yaml  values.yaml
helm/texas/templates/: _helpers.tpl  deployment-beat.yaml  deployment-bot.yaml  deployment-worker.yaml  service.yaml
src/api/: __init__.py  auth.py  bot.py  chat.py  checkin.py  drift_bottle.py  feedback.py  handlers.py  jrlp.py  like.py  llm.py  logs.py  permission.py  personnel.py  queue.py  router.py  status.py
src/api/schemas/: auth.py  checkin.py  jrlp.py  like.py  personnel.py
src/apis/: __init__.py  bot.py  chat.py  checkin.py  drift_bottle.py  feedback.py  handlers.py  jrlp.py  like.py  logs.py  permission.py  queue.py  router.py
src/apis/schemas/: drift_bottle.py  jrlp.py  like.py
src/core/: __init__.py  app.py  config.py  dependencies.py  exception.py  lifespan.py  main.py  version.py
src/core/apis/: __init__.py  llm.py  personnel.py
src/core/browser/: __init__.py  service.py
src/core/cache/: client.py  key_registry.py  keys.py
src/core/chat/: __init__.py  api.py  archive.py  archive_models.py  archive_service.py  engine.py  exporter.py  main.py  models.py  s3.py  service.py
src/core/db/: __init__.py  alembic_config_factory.py  alembic_env_common.py  base.py  cli.py  engine.py  migration.py  migration_registry.py  utils.py
src/core/framework/: context.py  decorators.py  dispatcher.py  feature_registry.py  interceptor.py  mapping.py  permission_checker.py  ports.py  scanner.py
src/core/handlers/: personnel.py
src/core/lifecycle/: __init__.py  orchestrator.py  registry.py
src/core/llm/: __init__.py  api.py  client.py  completion.py  main.py  models.py  schemas.py  service.py
src/core/logging/: broadcast.py  setup.py
src/core/monitoring/: metrics.py  middleware.py
src/core/permission/: __init__.py  checker.py  main.py
src/core/personnel/: __init__.py  api.py  events.py  handler.py  main.py  models.py  service.py  sync.py
src/core/protocol/: api.py  api_file.py  api_gocq.py  api_napcat.py  event.py  segment.py  utils.py
src/core/registries/: config_registry.py  feature_registry.py  permission_registry.py  service_registry.py
src/core/rpc/: __init__.py  bridge.py  consumer.py  keys.py  models.py  proxy.py
src/core/services/: archive_exporter.py  archive_s3.py  chat.py  chat_archive.py  llm.py  llm_completion.py  llm_schemas.py  permission.py  permission_checker.py  personnel.py  personnel_events.py  personnel_sync.py
src/core/tasks/: celery_app.py  chat_archive.py  daily_checkin.py  daily_like.py  main.py  personnel.py  scheduled.py  utils.py
src/core/utils/: __init__.py  helpers.py  html_utils.py  md2img.py  resource.py  response.py
src/core/ws/: connection.py  heartbeat.py  server.py
src/handlers/: __init__.py  checkin.py  checkin_handler.py  drift_bottle.py  drift_bottle_handler.py  echo_handler.py  feedback.py  feedback_handler.py  help.py  help_handler.py  jrlp.py  jrlp_handler.py  like.py  like_handler.py  personnel_handler.py  status_handler.py
src/models/: __init__.py  auth.py  chat.py  chat_archive.py  checkin.py  drift_bottle.py  enums.py  feedback.py  group.py  handler_data.py  jrlp.py  like.py  llm.py  message_log.py  permission.py  personnel.py  user.py
src/services/: __init__.py  archive_exporter.py  archive_s3.py  auth.py  browser.py  chat.py  chat_archive.py  checkin.py  daily_checkin.py  drift_bottle.py  feedback.py  jrlp.py  like.py  llm.py  llm_client.py  llm_completion.py  md_renderer.py  permission.py  personnel.py  personnel_events.py  personnel_query.py  personnel_sync.py
src/tasks/: __init__.py  chat_archive.py  daily_checkin.py  daily_like.py  scheduled.py
tests/: conftest.py
tests/integration/: test_api_health.py  test_composite_mapping.py  test_scanner_full.py
tests/integration/db/: conftest.py  test_cache_client.py  (+1 more)
(+154 files in other folders)
