[project]
name = "Texas"
version = "1.3.0"
description = "A high-performance, extensible QQ Bot framework based on NapCat / OneBot 11"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.3.3",
    "alembic>=1.18.4",
    "celery[redis]>=5.6.3",
    "celery-redbeat>=2.3.3",
    "redis>=5.2",
    "prometheus_client>=0.21",
    "structlog>=24.4",
    "httpx>=0.28",
    "openai>=2.31.0",
    "celery-types>=0.24.0",
    "boto3>=1.35",
    "playwright>=1.49",
    "markdown-it-py>=3.0",
    "pyarrow>=18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
db = "src.core.db.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
    "mypy>=1.20.1",
    "commitizen>=4.13.10",
    "pre-commit>=4.5.1",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008"]  # Depends() in argument defaults is standard FastAPI practice

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "sqlalchemy.orm.DeclarativeBase",
    "src.core.db.base.Base",
    "src.core.db.base.ChatBase",
    "pydantic.BaseModel",
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/versions/*.py" = ["E501", "TC003", "UP035", "UP007", "I001"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redbeat.*", "pyarrow.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
bump_message = "chore(release): v$new_version"
version_files = [
    "frontend/package.json:version",
    "helm/texas/Chart.yaml:version",
    "helm/texas/Chart.yaml:appVersion",
]
