[project]
name = "Texas"
version = "1.3.0"
description = "A high-performance, extensible QQ Bot framework based on NapCat / OneBot 11"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.3",
    "alembic>=1.18.4",
    "celery[redis]>=5.6.3",
    "celery-redbeat>=2.3.3",
    "redis>=5.2",
    "prometheus_client>=0.25.0",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "celery-types>=0.26.0",
    "boto3>=1.42.97",
    "playwright>=1.58.0",
    "markdown-it-py>=4.0.0",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
db = "src.core.db.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "commitizen>=4.13.10",
    "pre-commit>=4.6.0",
]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "freezegun>=1.5",
    "pytest-cov>=6.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008"]  # Depends() in argument defaults is standard FastAPI practice

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "sqlalchemy.orm.DeclarativeBase",
    "src.core.db.base.Base",
    "src.core.db.base.ChatBase",
    "pydantic.BaseModel",
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/versions/*.py" = ["E501", "TC003", "UP035", "UP007", "I001"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redbeat.*", "pyarrow.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src"]
omit = [
    # 数据库迁移文件
    "src/core/db/migrations/*",
    # 数据库基础设施（需要真实 DB 连接）
    "src/core/db/*",
    # Redis 缓存客户端（需要真实 Redis）
    "src/core/cache/*",
    # WebSocket 服务器（需要 NapCat 连接）
    "src/core/ws/*",
    # 应用入口 / 生命周期编排（需要全部中间件）
    "src/core/main.py",
    "src/core/lifespan.py",
    "src/core/lifecycle/orchestrator.py",
    # Celery 异步任务（需要 Celery Worker + Redis）
    "src/core/tasks/*",
    "src/tasks/*",
    # RPC 跨进程通信（需要 Redis pub/sub）
    "src/core/rpc/*",
    # 外部协议 API（需要 NapCat 连接）
    "src/core/protocol/api.py",
    "src/core/protocol/api_file.py",
    "src/core/protocol/api_gocq.py",
    "src/core/protocol/api_napcat.py",
    "src/core/protocol/event.py",
    # 浏览器渲染（需要 Playwright + Chromium）
    "src/core/browser/*",
    "src/core/utils/md2img.py",
    # FastAPI 路由控制器（需要完整 app 上下文 + DB）
    "src/apis/*",
    "src/core/apis/*",
    # 业务服务层（需要 DB/Redis 实例注入）
    "src/services/*",
    "src/core/services/chat.py",
    "src/core/services/chat_archive.py",
    "src/core/services/archive_exporter.py",
    "src/core/services/archive_s3.py",
    "src/core/services/llm.py",
    "src/core/services/llm_client.py",
    "src/core/services/llm_completion.py",
    "src/core/services/llm_schemas.py",
    "src/core/services/permission.py",
    "src/core/services/personnel.py",
    "src/core/services/personnel_events.py",
    "src/core/services/personnel_query.py",
    "src/core/services/personnel_sync.py",
    # 系统级 Handler（依赖 PersonnelService 真实实例）
    "src/core/handlers/*",
    # 日志 / 监控配置（需要完整运行时）
    "src/core/logging/*",
    "src/core/monitoring/*",
    # 其他基础设施
    "src/core/config.py",
    "src/core/dependencies.py",
    "src/core/version.py",
    "src/core/utils/resource.py",
    "src/core/utils/helpers.py",
    "src/core/utils/html_utils.py",
    "src/core/utils/response.py",
    # 事件分发器（需要完整拦截器链 + Redis）
    "src/core/framework/dispatcher.py",
    # 拦截器（需要运行时日志/监控基础设施）
    "src/core/framework/interceptors/*",
    "src/core/framework/interceptor.py",
    "src/core/framework/ports.py",
    # 交互式会话管理（需要 Redis 持久化）
    "src/core/framework/session/manager.py",
    "src/core/framework/session/state_machine.py",
    "src/core/framework/session/base.py",
    "src/core/framework/session/context.py",
    # 注册表（无业务逻辑，纯数据存储）
    "src/core/registries/config_registry.py",
    "src/core/registries/permission_registry.py",
    "src/core/registries/service_registry.py",
    # 消息段构建器（纯 API 包装，无复杂逻辑）
    "src/core/protocol/models/segments.py",
    "src/core/protocol/segment.py",
    # help handler（依赖完整功能注册表动态生成）
    "src/handlers/help.py",
    # 业务异常类（纯数据类）
    "src/core/exception.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
# 仅统计框架核心 + Handler 层的覆盖率，目标 ≥ 75%
fail_under = 75

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
bump_message = "chore(release): v$new_version"
version_files = [
    "frontend/package.json:version",
    "helm/texas/Chart.yaml:version",
    "helm/texas/Chart.yaml:appVersion",
]
