[project]
name = "Texas"
version = "1.4.0"
description = "A high-performance, extensible QQ Bot framework based on NapCat / OneBot 11"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.4",
    "celery[redis]>=5.6.3",
    "celery-redbeat>=2.3.3",
    "redis>=5.2",
    "prometheus_client>=0.25.0",
    "structlog>=25.5.0",
    "httpx>=0.28.1",
    "openai>=2.36.0",
    "celery-types>=0.26.0",
    "boto3>=1.43.3",
    "playwright>=1.59.0",
    "markdown-it-py>=4.0.0",
    "pyarrow>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
db = "src.core.db.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "mypy>=1.20.1",
    "commitizen>=4.13.10",
    "pre-commit>=4.6.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "freezegun>=1.5.5",
    "pytest-cov>=6.0",
    "pytest-mock>=3.15.1",
    "testcontainers[postgres,redis]>=4.14.2",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008"]  # FastAPI 标准用法：在参数默认值中使用 Depends()

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "sqlalchemy.orm.DeclarativeBase",
    "src.core.db.base.Base",
    "src.core.db.base.ChatBase",
    "pydantic.BaseModel",
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/versions/*.py" = ["E501", "TC003", "UP035", "UP007", "I001"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "redbeat.*", "pyarrow.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "integration: 需要真实 Docker 容器的集成测试（PostgreSQL + Redis）",
]

[tool.coverage.run]
source = ["src"]
omit = [
    # 数据库基础设施（需要真实 DB 连接）
    "src/core/db/*",
    # Redis/缓存客户端（需要真实 Redis）
    "src/core/cache/*",
    # WebSocket / NapCat 连接
    "src/core/ws/*",
    # 应用入口
    "src/core/main.py",
    "src/core/lifespan.py",
    # Celery 任务（需要 Celery Worker）
    "src/core/tasks/*",
    "src/core/rpc/*",
    # 外部协议 API（需要 NapCat 连接）
    "src/core/protocol/api*.py",
    "src/core/protocol/event.py",
    # 浏览器渲染（需要 Playwright + Chromium）
    "src/core/browser/*",
    # FastAPI 路由（需要完整 app 上下文 + DB）
    "src/apis/*",
    "src/core/apis/*",
    # 迁移文件
    "src/core/db/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 30

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
bump_message = "chore(release): v$new_version"
update_changelog_on_bump = true
changelog_incremental = true
version_files = [
    "frontend/package.json:version",
    "helm/texas/Chart.yaml:version",
    "helm/texas/Chart.yaml:appVersion",
]
